Fixed layout issues.

--- a/Elinic/Content/styles.css
+++ b/Elinic/Content/styles.css
@@ -150,7 +150,7 @@
     .item--big a,
     .item--big a img
     {
-        width: 100%;
+        width: 98%;
         display: block;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
